# calculadora-roi-lead-api

./: .dockerignore  Dockerfile  Makefile  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
k8s/: auto-scale.yml  deployment.yml  external-secrets.yml  namespace.yml  service.yml
roi/: asgi.py  settings.py  urls.py  wsgi.py
roi_app/: api.py  apps.py  asgi.py  models.py  serializers.py  settings.py  urls.py  validators.py  wsgi.py
roi_app/migrations/: 0001_initial.py  0002_auto_20200925_2323.py
