[tool.poetry]
name = "roi-lead"
version = "0.1.0"
description = ""
authors = ["Ana Paula Carneiro <anapaula.carneiro@olist.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "*"
djangorestframework = "*"
psycopg2-binary = "*"
gunicorn = "*"
dj-database-url = "*"
dj-static = "*"
python-decouple = "*"

[tool.poetry.dev-dependencies]
factory-boy = "*"
pytest = "*"
pytest-cov = "*"
pytest-deadfixtures = "*"
pytest-django = "*"
pytest-envvars = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
